[workspace]
members = ["contracts/cw-start"]

[workspace.dependencies]
cosmwasm-schema = "1.2.7"
cosmwasm-std = "1.2.7"
cw-storage-plus = "1.1.0"
thiserror = "1.0.40"
cw-multi-test = "0.16.5"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
