[package]
name = "cw-start-02"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cw2 = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = "1.0.164"
cw-multi-test = { workspace = true, optional = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw-start-0_1 = { path = "../cw-start", package = "cw-start", features = ["tests"]}
serde_json = "1.0"

